tests/negative/private_method_access.lu
require "godot"

class Secret
  private

  def hidden: String
    return "hidden"
  end
end

class Main < Node
  def ready: void
    secret: Secret = Secret.new
    value: String = secret.hidden
  end
end
